# renter-shield

./: .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  NEXT_STEPS.md  README.md  make_manifest.py  pyproject.toml  streamlit_investigator.py  streamlit_renter.py  upload_zenodo.py
.github/workflows/: ci-cd.yml  data-refresh.yml  integration.yml
deploy/: dns-check.sh  docker-compose.yml  entrypoint.sh  nginx.conf
deploy/landing/: index.html
renter_shield/: README.md  __init__.py  api.py  audit.py  cli.py  config.py  models.py  ownership.py  pdf_report.py  pipeline.py  scoring.py  web.py  web_developer.py  web_investigator.py
renter_shield/jurisdictions/: __init__.py  austin.py  base.py  baton_rouge.py  boston.py  chicago.py  detroit.py  hud_reac.py  la.py  miami.py  nyc.py  philadelphia.py  pittsburgh.py  seattle.py  sf.py
renter_shield/static/: style.css
renter_shield/templates/: 404.html  500.html  base.html  dev_register.html  dev_registered.html  developer.html  inv_jurisdiction.html  inv_overview.html  inv_owner.html  inv_register.html  inv_registered.html  owner.html  property.html  register.html  registered.html  search.html
renter_shield/templates/partials/: inv_owners_table.html  inv_search_results.html  methodology.html  search_results.html  violations_page.html
tests/: test_api_routes.py  test_integration_download.py  test_smoke.py  test_web.py  test_web_investigator.py
