[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "renter-shield"
version = "0.2.0"
description = "Multi-jurisdiction housing violation scoring platform — dual-audience API and dashboards for renters and investigators"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "fpdf2>=2.8",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx"]

[project.scripts]
renter-shield = "renter_shield.cli:main"

[tool.setuptools.packages.find]
include = ["renter_shield*"]
