[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "renter-shield"
version = "0.2.0"
description = "Multi-jurisdiction housing violation scoring platform — dual-audience API and dashboards for renters and investigators"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "fpdf2>=2.8",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx"]
download = ["sodapy>=2.2.0"]

[project.scripts]
renter-shield = "renter_shield.cli:main"

[tool.setuptools.packages.find]
include = ["renter_shield*"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: hits live jurisdiction APIs; slow, network-dependent (run with -m integration)",
]
